
VERSION 0.8.1cvs
================

2006-01-16  Vincent Richard  <vincent@vincent-richard.net>

 * Added support for attachments of type "message/rfc822".

2006-01-15  Vincent Richard  <vincent@vincent-richard.net>

 * IMAP: implemented multi-fetching. Now using "FETCH x:y" instead of
   sending (y-x+1) "FETCH" requests.

2005-12-26  Vincent Richard  <vincent@vincent-richard.net>

 * posixSocket.cpp: use getaddrinfo() if available. This should bring
   thread-safe DNS resolution and IPv6 support.

2005-12-18  Vincent Richard  <vincent@vincent-richard.net>

 * IMAPParser.hpp: compatibility bugs + enhanced debugging trace.

2005-12-04  Vincent Richard  <vincent@vincent-richard.net>

 * exception.{hpp|cpp}: fixed segfault in destructor when destroying
   an exception chain with more than 2 elements (thanks to Bertrand
   Benoit).

 * posixChildProcess.cpp: fixed a bug in argument vector; last argument
   was not NULL (thanks to Bertrand Benoit).

2005-11-27  Vincent Richard  <vincent@vincent-richard.net>

 * maildirUtils.cpp: fixed problem with ':' in filename on Windows
   platform (thanks to Benjamin Biron).

 * random.cpp: fixed buffer overrun in random::getString (thanks
   to Benjamin Biron).

2005-11-07  Vincent Richard  <vincent@vincent-richard.net>

 * SMTPTransport.cpp: fixed bug in disconnect() when authentication is
   not needed (thanks to Benjamin Biron).

 * dateTime.cpp: gmtime() and localtime() are reentrant when using
   MS C runtime library (MinGW/MSVC).

2005-11-06  Vincent Richard  <vincent@vincent-richard.net>

 * Started version 0.8.1.


VERSION 0.8.0
=============

2005-11-06  Vincent Richard  <vincent@vincent-richard.net>

 * First version of the VMime Book.

2005-11-05  Vincent Richard  <vincent@vincent-richard.net>

 * Refactored header field values and parameters.

2005-10-19  Vincent Richard  <vincent@vincent-richard.net>

 * charsetConverter.{hpp|cpp}: new object 'charsetConverter' for converting